--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/Guía%20en%20el%20camino%20de%20transformación%20(1).png" alt="Guia en el camino de transformacion">
+              <img src="assets/images/Guia%20en%20el%20camino%20de%20transformacion%20(1).png" alt="Guia en el camino de transformacion">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mt-0 mb-2 display-5">
@@ -329,7 +329,7 @@
         <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-             <img src="assets/images/Descubrir-me%20en%20compañía%20(1).png" alt="Descubrir-me en compañia">
+             <img src="assets/images/Descubrir-me%20en%20compañia%20(1).png" alt="Descubrir-me en compañia">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-2 mt-0 display-5">
