--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
           
           <!-- Botón agendar cita -->
           <div class="navbar-buttons mbr-section-btn">
-            <a class="btn btn-primary display-4" href="https://drive.google.com/drive/folders/1irBTx6ValVNBcjF8XPM3CnuLw05Cr81E?usp=sharing" target="_blank">Agendar Cita
-            </a>
+            <a class="btn btn-primary display-4" href="https://calendar.app.google/5Sv8ysodVr4GAoD86" target="_blank">Agendar Cita</a>
           </div>
         </div>
       </div>
