--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     border-radius: 20px;
     box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     background: #fff;
-    font-family: Arial, sans-serif;
+    font-family: 'Alan Sans', sans-serif;  
   }
   .dbw-card h3 {
     font-size: 2rem;
