--- a/index.html
+++ b/index.html
@@ -64,7 +64,21 @@
   
   <!-- SEO y descripción -->
   <title>Javier Verber - Transformación Personal</title>
-  <meta name="description" content="Reconecta contigo y elige diferente">
+<meta name="description" content="Reconecta contigo y elige diferente">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://ameli04.github.io/Javerber/">
+<meta property="og:title" content="Javier Verber - Transformación Personal">
+<meta property="og:description" content="Reconecta contigo y elige diferente. Guía profesional en tu proceso de autodescubrimiento y transformación personal.">
+<meta property="og:image" content="https://ameli04.github.io/Javerber/assets/images/logo-previa.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://ameli04.github.io/Javerber/">
+<meta property="twitter:title" content="Javier Verber - Transformación Personal">
+<meta property="twitter:description" content="Reconecta contigo y elige diferente. Guía profesional en tu proceso de autodescubrimiento y transformación personal.">
+<meta property="twitter:image" content="https://ameli04.github.io/Javerber/assets/images/logo-previa.png">
   
   <!-- Favicon -->
   <link rel="shortcut icon" href="assets/images/logo-11-284x284.png" type="image/x-icon">
