--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@
 <meta property="og:image" content="https://ameli04.github.io/Javerber/assets/images/logo-previa.png">
 
 <!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:card" content="summary">
 <meta property="twitter:url" content="https://ameli04.github.io/Javerber/">
 <meta property="twitter:title" content="Javier Verber - Transformación Personal">
 <meta property="twitter:description" content="Reconecta contigo y elige diferente. Guía profesional en tu proceso de autodescubrimiento y transformación personal.">
 <meta property="twitter:image" content="https://ameli04.github.io/Javerber/assets/images/logo-previa.png">
+
+    
   
   <!-- Favicon -->
   <link rel="shortcut icon" href="assets/images/logo-11-284x284.png" type="image/x-icon">
