--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://ameli04.github.io/Javerber/">
 <meta property="og:title" content="Javier Verber - Transformación Personal">
-<meta property="og:description" content="Reconecta contigo y elige diferente. Guía profesional en tu proceso de autodescubrimiento y transformación personal.">
+<meta property="og:description" content="Reconecta contigo y elige diferente. Guía profesional en tu proceso de autodescubrimiento.">
 <meta property="og:image" content="https://ameli04.github.io/Javerber/assets/images/logo-previa(1).png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary">
 <meta property="twitter:url" content="https://ameli04.github.io/Javerber/">
 <meta property="twitter:title" content="Javier Verber - Transformación Personal">
-<meta property="twitter:description" content="Reconecta contigo y elige diferente. Guía profesional en tu proceso de autodescubrimiento y transformación personal.">
+<meta property="twitter:description" content="Reconecta contigo y elige diferente. Guía profesional en tu proceso de autodescubrimiento.">
 <meta property="twitter:image" content="https://ameli04.github.io/Javerber/assets/images/logo-previa(1).png">
 
     
