--- a/index.html
+++ b/index.html
@@ -2,60 +2,7 @@
 <html lang="es">
 <head>
 
-    <!-- CSS del blog -->
-
-   <style>
-  .blog-widget-section {
-    padding: 60px 0;
-    background-color: #f0f0f0;
-  }
-  .dbw-card {
-    max-width: 100%;
-    width: 100%;
-    padding: 40px;
-    border-radius: 20px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-    background: #fff;
-    font-family: 'Alan Sans', sans-serif;  
-  }
-  .dbw-card h3 {
-    font-size: 2rem;
-    margin-bottom: 30px;
-    color: #224e74;
-    text-align: center;
-  }
-  /* Estilos para el widget de FeedWind */
-  .dbw-card .fw-container {
-    margin: 20px 0;
-    width: 100%;
-  }
-  .dbw-more { 
-    display: block;
-    text-align: center;
-    margin-top: 30px; 
-    padding: 15px 40px;
-    background: #224e74;
-    color: #fff !important;
-    text-decoration: none;
-    border-radius: 50px;
-    font-weight: bold;
-    transition: background 0.3s;
-  }
-  .dbw-more:hover {
-    background: #0a6cff;
-  }
-  
-  /* Responsive */
-  @media (max-width: 767px) {
-    .dbw-card {
-      padding: 20px;
-    }
-    .dbw-card h3 {
-      font-size: 1.5rem;
-    }
-  }
-</style>
-
+    
 
   <!-- Metadatos básicos -->
   <meta charset="UTF-8">
@@ -100,6 +47,9 @@
   <!-- Estilos adicionales -->
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+
+     <!-- Estilos personalizados Javerber -->
+  <link rel="stylesheet" href="assets/bootstrap/css/cambios.css" type="text/css">
 </head>
 
 <body>
