--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
           <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" preloader-text="Loading" loading_spinner="off" data-fw-param="175509/"></script>
           <!-- end feedwind code -->
           
-          <a id="dbw-more" href="https://blogjaverber.wordpress.com" target="_blank">Ver más</a>
+          <a id="dbw-more" href="https://www.tumblr.com/blog/jennams-posts" target="_blank">Ver más</a>
         </div>
       </div>
     </div>
