--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
 <meta property="og:description" content="Reconecta contigo y elige diferente. Guía profesional en tu proceso de autodescubrimiento y transformación personal.">
 <meta property="og:image" content="https://ameli04.github.io/Javerber/assets/images/logo-previa.png">
 
+<!-- Open Graph / Facebook & Instagram -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://ameli04.github.io/Javerber/">
+<meta property="og:title" content="Javier Verber - Transformación Personal">
+<meta property="og:description" content="Reconecta contigo y elige diferente. Guía profesional en tu proceso de autodescubrimiento y transformación personal.">
+<meta property="og:image" content="https://ameli04.github.io/Javerber/assets/images/logo-previa.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:alt" content="Javier Verber - Transformación Personal">
+
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://ameli04.github.io/Javerber/">
